# slug_racing

./: CMakeLists.txt  README.md  lottery_game  main.cpp
assets/: 2.aseprite  eaten.aseprite  food.aseprite  intro.aseprite  numbers.aseprite  seafloor.aseprite  slug_0.aseprite  slug_0_big.aseprite  slug_1.aseprite  slug_1_big.aseprite  slug_2.aseprite  slug_2_big.aseprite  slug_3.aseprite  slug_3_big.aseprite  slug_4.aseprite  slug_4_big.aseprite  slug_5.aseprite  slug_5_big.aseprite  slug_6.aseprite  slug_6_big.aseprite  slug_7.aseprite  start_and_end.aseprite  start_and_end2.aseprite  unused.aseprite
assets/intro/: 對應.txt
assets/text_generation/: settings.json  text_generation.pde
src/: display.cpp  display.h  element.h  end.h  food.h  game_flow.cpp  game_flow.h  game_state.h  main.cpp  slug.cpp  slug.h  slug_enum.h
